--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   provider: ^6.0.5
   badges: ^3.1.1
+  intl: ^0.18.1
 
 flutter:
   uses-material-design: true
