--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,19 @@ dependencies:
   flutter:
     sdk: flutter
 
+assets: -assets/images/product-placeholder.png
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   provider: ^6.0.5
+  #provider: ^4.0.0
   badges: ^3.1.1
   intl: ^0.18.1
   http: ^1.1.0
+  firebase_auth: ^4.7.0
+  shared_preferences: ^2.2.0
 
 flutter:
   uses-material-design: true
